add projects section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
         .card {
-          @apply relative grid pb-1 transition-all sm:grid-cols-8 sm:gap-8 md:gap-4 lg:hover:!opacity-100 lg:group-hover/list:opacity-50;
+          @apply relative grid pb-1 transition-all sm:grid-cols-8 gap-4 sm:gap-3 lg:hover:!opacity-100 lg:group-hover/list:opacity-50;
         }
 
         .card-header {
@@ -84,10 +84,10 @@
                 <a href="#experience" class="nav-li">experience</a>
               </li>
               <li>
-                <a href="#education" class="nav-li">education</a>
+                <a href="#projects" class="nav-li">projects</a>
               </li>
               <li>
-                <a href="#projects" class="nav-li">projects</a>
+                <a href="#education" class="nav-li">education</a>
               </li>
             </ul>
           </nav>
@@ -227,7 +227,7 @@
                     back-end developer. Created a React boilerplate for future
                     use and developed React assignments for trainees.
                   </p>
-                  <ul class="mt-2 flex flex-wrap gap-1.5">
+                  <ul class="mt-4 flex flex-wrap gap-1.5">
                     <li class="tag">React</li>
                     <li class="tag">Angular</li>
                     <li class="tag">NestJS</li>
@@ -259,12 +259,50 @@
                     of systems such as content management systems, and worked
                     with external organizations as a React developer.
                   </p>
-                  <ul class="mt-2 flex flex-wrap gap-1.5">
+                  <ul class="mt-4 flex flex-wrap gap-1.5">
                     <li class="tag">React</li>
                     <li class="tag">React Native</li>
                     <li class="tag">TypeScript</li>
                     <li class="tag">GraphQL</li>
                     <li class="tag">Tailwindcss</li>
+                  </ul>
+                  <ul class="mt-4 flex flex-wrap gap-4">
+                    <li>
+                      <a
+                        href="https://play.google.com/store/apps/details?id=com.venturedna.palmoil&hl=en&gl=US"
+                        class="inline-flex items-center text-sm text-slate-300 hover:text-teal-300"
+                      >
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="mr-1 h-4 w-4"
+                          viewBox="0 0 24 24"
+                        >
+                          <path
+                            fill="currentColor"
+                            d="M1 18q.225-2.675 1.638-4.925T6.4 9.5L4.55 6.3q-.15-.225-.075-.475T4.8 5.45q.2-.125.45-.05t.4.3L7.5 8.9Q9.65 8 12 8t4.5.9l1.85-3.2q.15-.225.4-.3t.45.05q.25.125.325.375t-.075.475L17.6 9.5q2.35 1.325 3.762 3.575T23 18zm6-2.75q.525 0 .888-.363T8.25 14q0-.525-.363-.888T7 12.75q-.525 0-.888.363T5.75 14q0 .525.363.888T7 15.25m10 0q.525 0 .888-.363T18.25 14q0-.525-.363-.888T17 12.75q-.525 0-.888.363T15.75 14q0 .525.363.888t.887.362"
+                          />
+                        </svg>
+                        <span>PalmOil Scan</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://play.google.com/store/apps/details?id=com.venturedna.palmoil&hl=en&gl=US"
+                        class="inline-flex items-center text-sm text-slate-300 hover:text-teal-300"
+                      >
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="mr-1 h-5 w-5"
+                          viewBox="0 0 24 24"
+                        >
+                          <path
+                            fill="currentColor"
+                            d="M4.442 8.73V7.5h1.231v1.23zm.116 7.77v-5.77h1v5.77zm6.384 0H9.173q-.671 0-1.143-.472t-.472-1.143v-5.77q0-.67.472-1.143q.472-.472 1.143-.472h1.77q.67 0 1.143.472q.472.472.472 1.143v5.77q0 .67-.472 1.143q-.473.472-1.144.472m-1.769-1h1.77q.269 0 .442-.173t.173-.442v-5.77q0-.269-.173-.442t-.443-.173H9.173q-.27 0-.442.173t-.173.442v5.77q0 .269.173.442t.442.173m5.385 1v-1h3.384q.27 0 .443-.173t.173-.442v-1.77q0-.269-.173-.442t-.443-.173h-1.769q-.671 0-1.143-.472t-.472-1.143v-1.77q0-.67.472-1.143q.472-.472 1.143-.472h3.385v1h-3.385q-.27 0-.442.173t-.173.442v1.77q0 .269.173.442t.442.173h1.77q.67 0 1.143.472q.472.472.472 1.143v1.77q0 .67-.472 1.143q-.473.472-1.144.472z"
+                          />
+                        </svg>
+                        <span>PalmOil Scan</span>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -273,7 +311,7 @@
             <li class="mb-12">
               <div class="card group/card">
                 <div class="card-overlay"></div>
-                <header class="card-header">Jul 2021 — Jan 2022</header>
+                <header class="card-header">Mar 2020 — Jul 2021</header>
                 <div class="z-10 sm:col-span-6">
                   <h3 class="font-medium leading-snug text-slate-200">
                     <a
@@ -288,14 +326,82 @@
                     Collaborated with the UI team to develop and enhance major
                     features of various utility management systems.
                   </p>
-                  <ul class="mt-2 flex flex-wrap gap-1.5">
+                  <ul class="mt-4 flex flex-wrap gap-1.5">
                     <li class="tag">Angular</li>
-                    <li class="tag">Angular Material</li>
-                    <li class="tag">Bootstrap</li>
-                    <li class="tag">RESTful API</li>
+                    <li class="tag">HTML</li>
+                    <li class="tag">CSS API</li>
+                    <li class="tag">JavaScript</li>
                     <li class="tag">Git</li>
                   </ul>
                 </div>
+              </div>
+            </li>
+          </ol>
+        </section>
+
+        <section id="projects">
+          <h2 class="section-title">Projects</h2>
+
+          <ol class="group/list">
+            <li class="mb-12">
+              <div class="card group/card">
+                <div class="card-overlay"></div>
+                <div class="z-10 sm:order-2 sm:col-span-6">
+                  <h3 class="font-medium leading-snug text-slate-200">
+                    <a
+                      href="https://sankasanjeeva.github.io/portfolio/"
+                      target="_blank"
+                      class="card-title"
+                      >Portfolio</a
+                    >
+                  </h3>
+                  <p class="mt-2 text-sm leading-normal">
+                    A portfolio site built with HTML and Tailwindcss
+                  </p>
+                  <ul class="mt-4 flex flex-wrap gap-1.5">
+                    <li class="tag">HTML</li>
+                    <li class="tag">Tailwindcss</li>
+                  </ul>
+                </div>
+                <img
+                  src="images/portfolio.png"
+                  alt="portfolio"
+                  loading="lazy"
+                  width="200"
+                  class="rounded border-2 border-slate-200/10 transition group-hover/list:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
+                />
+              </div>
+            </li>
+
+            <li class="mb-12">
+              <div class="card group/card">
+                <div class="card-overlay"></div>
+                <div class="z-10 sm:order-2 sm:col-span-6">
+                  <h3 class="font-medium leading-snug text-slate-200">
+                    <a
+                      href="https://sankasanjeeva.github.io/Card-Stacking/"
+                      target="_blank"
+                      class="card-title"
+                      >Card Stacking</a
+                    >
+                  </h3>
+                  <p class="mt-2 text-sm leading-normal">
+                    As the page is being scrolled, the cards are stacked on top
+                    of each other. Also, cards can be pushed or popped by
+                    clicking on them.
+                  </p>
+                  <ul class="mt-4 flex flex-wrap gap-1.5">
+                    <li class="tag">HTML</li>
+                    <li class="tag">Tailwindcss</li>
+                  </ul>
+                </div>
+                <img
+                  src="images/card-stacking.png"
+                  alt="card-stacking"
+                  loading="lazy"
+                  width="200"
+                  class="rounded border-2 border-slate-200/10 transition group-hover/list:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
+                />
               </div>
             </li>
           </ol>
