add furniro project into project section

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                       <a
                         href="https://play.google.com/store/apps/details?id=com.venturedna.palmoil&hl=en&gl=US"
                         class="inline-flex items-center text-sm text-slate-300 hover:text-teal-300"
+                        target="_blank"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -291,6 +292,7 @@
                       <a
                         href="https://apps.apple.com/us/app/palmoil-scan/id671945416"
                         class="inline-flex items-center text-sm text-slate-300 hover:text-teal-300"
+                        target="_blank"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -353,6 +355,37 @@
           <h2 class="section-title">Projects</h2>
 
           <ol class="group/list">
+            <li class="mb-12">
+              <div class="card group/card">
+                <div class="card-overlay"></div>
+                <div class="z-10 sm:order-2 sm:col-span-6">
+                  <h3 class="font-medium leading-snug text-slate-200">
+                    <a
+                      href="https://furniro-ochre.vercel.app/"
+                      target="_blank"
+                      class="card-title"
+                      >Furniro</a
+                    >
+                  </h3>
+                  <p class="mt-2 text-sm leading-normal">
+                    An e-Commerce Website for furniture
+                  </p>
+                  <ul class="mt-4 flex flex-wrap gap-1.5">
+                    <li class="tag">React</li>
+                    <li class="tag">HTML</li>
+                    <li class="tag">Tailwindcss</li>
+                  </ul>
+                </div>
+                <img
+                  src="images/furniro.png"
+                  alt="furniro"
+                  loading="lazy"
+                  width="200"
+                  class="rounded border-2 border-slate-200/10 transition group-hover/list:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
+                />
+              </div>
+            </li>
+ 
             <li class="mb-12">
               <div class="card group/card">
                 <div class="card-overlay"></div>
