add schoolSync project into project section

--- a/index.html
+++ b/index.html
@@ -361,6 +361,38 @@
                 <div class="z-10 sm:order-2 sm:col-span-6">
                   <h3 class="font-medium leading-snug text-slate-200">
                     <a
+                      href="https://schoolsync-f5081.web.app/"
+                      target="_blank"
+                      class="card-title"
+                      >SchoolSync</a
+                    >
+                  </h3>
+                  <p class="mt-2 text-sm leading-normal">
+                    A chat application for communication between teachers and
+                    students in a school.
+                  </p>
+                  <ul class="mt-4 flex flex-wrap gap-1.5">
+                    <li class="tag">React</li>
+                    <li class="tag">Firebase</li>
+                    <li class="tag">Tailwindcss</li>
+                  </ul>
+                </div>
+                <img
+                  src="images/schoolSync.png"
+                  alt="schoolSync"
+                  loading="lazy"
+                  width="200"
+                  class="rounded border-2 border-slate-200/10 transition group-hover/list:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
+                />
+              </div>
+            </li>
+
+            <li class="mb-12">
+              <div class="card group/card">
+                <div class="card-overlay"></div>
+                <div class="z-10 sm:order-2 sm:col-span-6">
+                  <h3 class="font-medium leading-snug text-slate-200">
+                    <a
                       href="https://furniro-ochre.vercel.app/"
                       target="_blank"
                       class="card-title"
@@ -385,7 +417,7 @@
                 />
               </div>
             </li>
- 
+
             <li class="mb-12">
               <div class="card group/card">
                 <div class="card-overlay"></div>
