add React boilerplate section

--- a/index.html
+++ b/index.html
@@ -393,6 +393,41 @@
                 <div class="z-10 sm:order-2 sm:col-span-6">
                   <h3 class="font-medium leading-snug text-slate-200">
                     <a
+                      href="https://react-boilerplate-zeta.vercel.app/home"
+                      target="_blank"
+                      class="card-title"
+                      >React Boilerplate</a
+                    >
+                  </h3>
+                  <p class="mt-2 text-sm leading-normal">
+                    A robust and scalable boilerplate for React.js applications
+                    built with Vite and TypeScript.
+                  </p>
+                  <ul class="mt-4 flex flex-wrap gap-1.5">
+                    <li class="tag">React</li>
+                    <li class="tag">shadcn/ui</li>
+                    <li class="tag">Tailwindcss</li>
+                    <li class="tag">TanStack Table</li>
+                    <li class="tag">TanStack Query</li>
+                    <li class="tag">React Hook Form</li>
+                  </ul>
+                </div>
+                <img
+                  src="images/react-boilerplate.png"
+                  alt="react-boilerplate"
+                  loading="lazy"
+                  width="200"
+                  class="rounded border-2 border-slate-200/10 transition group-hover/list:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
+                />
+              </div>
+            </li>
+
+            <li class="mb-12">
+              <div class="card group/card">
+                <div class="card-overlay"></div>
+                <div class="z-10 sm:order-2 sm:col-span-6">
+                  <h3 class="font-medium leading-snug text-slate-200">
+                    <a
                       href="https://furniro-ochre.vercel.app/"
                       target="_blank"
                       class="card-title"
