--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="cursor.js"></script>
     <script src="observer.js"></script>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <link href="https://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet" />
     <style type="text/tailwindcss">
       @layer base {
@@ -437,6 +438,73 @@
                 <div class="z-10 sm:order-2 sm:col-span-6">
                   <h3 class="font-medium leading-snug text-slate-200">
                     <a
+                      href="https://hire-hub-self.vercel.app/"
+                      target="_blank"
+                      class="card-title"
+                      >Hire Hub</a
+                    >
+                  </h3>
+                  <p class="mt-2 text-sm leading-normal">
+                    A modern job board application designed to connect employers
+                    and job seekers seamlessly
+                  </p>
+                  <ul class="mt-4 flex flex-wrap gap-1.5">
+                    <li class="tag">React</li>
+                    <li class="tag">Next.js</li>
+                    <li class="tag">Prisma</li>
+                    <li class="tag">Tailwindcss</li>
+                  </ul>
+                </div>
+                <img
+                  src="images/hire-hub.jpg"
+                  alt="hire-hub"
+                  loading="lazy"
+                  width="200"
+                  class="rounded border-2 border-slate-200/10 transition group-hover/list:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
+                />
+              </div>
+            </li>
+
+            <li class="mb-12">
+              <div class="card group/card">
+                <div class="card-overlay"></div>
+                <div class="z-10 sm:order-2 sm:col-span-6">
+                  <h3 class="font-medium leading-snug text-slate-200">
+                    <a
+                      href="https://www.npmjs.com/package/react-use-audio-recorder"
+                      target="_blank"
+                      class="card-title"
+                      >React-use-audio-recorder</a
+                    >
+                  </h3>
+                  <p class="mt-2 text-sm leading-normal">
+                    React-use-audio-recorder simplifies audio recording in your
+                    React applications. Built on top of the powerful
+                    RecordRTC.js library, this provides an easy-to-use interface
+                    for capturing, managing, and interacting with audio
+                    recordings.
+                  </p>
+                  <ul class="mt-4 flex flex-wrap gap-1.5">
+                    <li class="tag">React</li>
+                    <li class="tag">recordrtc</li>
+                  </ul>
+                </div>
+                <img
+                  src="images/react-use-audio-recorder.png"
+                  alt="react-use-audio-recorder"
+                  loading="lazy"
+                  width="200"
+                  class="rounded border-2 border-slate-200/10 transition group-hover/list:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
+                />
+              </div>
+            </li>
+
+            <li class="mb-12">
+              <div class="card group/card">
+                <div class="card-overlay"></div>
+                <div class="z-10 sm:order-2 sm:col-span-6">
+                  <h3 class="font-medium leading-snug text-slate-200">
+                    <a
                       href="https://furniro-ochre.vercel.app/"
                       target="_blank"
                       class="card-title"
@@ -485,7 +553,7 @@
                   </ul>
                 </div>
                 <img
-                  src="images/portfolio.png"
+                  src="images/portfolio.jpg"
                   alt="portfolio"
                   loading="lazy"
                   width="200"
